# cross-review

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  sample-project.json  tailwind.config.js
.github/workflows/: release.yml
sample-export/: review-for-qa-1.md  review-for-qa-2.md  review-for-qa-3.md  review-for-team-growth.md  review-for-đội-qa-số-4.md
scripts/: install-harness.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  export.rs  lib.rs  main.rs  models.rs  slug.rs  validation.rs  zip_export.rs
src/components/: ContentTabs.tsx  EditorPanel.tsx  PreviewBody.tsx  PreviewPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  ToastHost.tsx  Toolbar.tsx  ValidationChecklist.tsx
src/hooks/: useExport.ts  useToast.ts
src/lib/: api.ts  i18n.ts  sanitize.ts  slug.ts  utils.ts
src/state/: projectStore.ts
