[package]
name = "review-weaver"
version = "0.6.6"
edition = "2021"
description = "Cross-review markdown report generator for QA teams"
license = "MIT"

[lib]
name = "review_weaver_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "review-weaver"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = "2"
zip = "2"
uuid = { version = "1", features = ["v4"] }
unicode-normalization = "0.1"
genai = "=0.6.5"
chrono = "0.4"
tokio = "1"
tokio-util = "0.7"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
